# libphipscutil

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_n_install.sh  clean.sh  install.sh
benches/: CMakeLists.txt  cpp_vec_vs_libphipscutil_vec_u64.cpp
examples/: CMakeLists.txt  vec_example.c
lib/: CMakeLists.txt
lib/inc/: phipscutil.h
lib/inc/vec/: vec.h
lib/lib/vec/: vec.c
src/benches/: cpp_vec_vs_cwambo_vec_u64.cpp  cpp_vec_vs_cwambo_vec_u8.cpp  cpp_vec_vs_libphipscutil_vec_u8.cpp
src/examples/: vec_example.c
src/lib/: phipscutil.h  vec.c  vec.h
src/test/: vec_test.c
tests/: CMakeLists.txt  c_vec_test.c  cpp_vec_test.cpp  test_util.h  vec_test.c
